Add /new-game link to home

--- a/src/components/LinkCard.astro
+++ b/src/components/LinkCard.astro
@@ -1,7 +1,7 @@
 ---
 import { cn } from '../lib/cn'
 
-type IconName = 'book' | 'play-card' | 'shopping-cart' | 'news'
+type IconName = 'book' | 'play-card' | 'shopping-cart' | 'news' | 'plus'
 
 interface Props {
   title: string
