--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -216,6 +216,18 @@ const sortedGames = games
   >
     <span>No results</span>
   </div>
+
+  <div class="mt-8 text-center">
+    <a
+      href="/new-game"
+      class={cn(
+        'unset inline-flex items-center px-3 py-1.5 text-sm text-stone-600 hover:text-stone-900 dark:text-stone-400 dark:hover:text-stone-200'
+      )}
+    >
+      <i class="ti ti-plus text-lg mr-1.5"></i>
+       Create new game mapping
+    </a>
+  </div>
 </PageLayout>
 
 <script>
