Fix lodash import

--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from 'astro:content'
-import { uniqBy } from 'lodash'
+import uniqBy from 'lodash/uniqBy'
 import PageMeta from '../components/PageMeta.astro'
 import Title from '../components/Title.astro'
 import { SITE_TITLE } from '../config'
