--- a/src/pages/games/[slug].astro
+++ b/src/pages/games/[slug].astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection, getEntry } from 'astro:content'
-import { uniqBy } from 'lodash'
+import uniqBy from 'lodash/uniqBy'
 import GameMappingDetails from '../../components/GameMappingDetails.astro'
 import GamePostMeta from '../../components/GamePostMeta.astro'
 import Prose from '../../components/Prose.astro'
