--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from 'astro:content'
-import { uniqBy } from 'lodash'
+import uniqBy from 'lodash/uniqBy'
 import PageMeta from '../components/PageMeta.astro'
 import Title from '../components/Title.astro'
 import PageLayout from '../layouts/PageLayout.astro'
