--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -1,13 +1,10 @@
 ---
-import { getCollection } from 'astro:content'
-import uniqBy from 'lodash/uniqBy'
 import PageMeta from '../components/PageMeta.astro'
 import Title from '../components/Title.astro'
 import PageLayout from '../layouts/PageLayout.astro'
+import { getGamesCollections } from '../utils/getGames'
 
-const jsonGames = await getCollection('games-json')
-const mdGames = await getCollection('games-md')
-const games = uniqBy([...jsonGames, ...mdGames], 'slug')
+const games = await getGamesCollections()
 ---
 
 <PageLayout>
